# agentflow

./: .gitignore  .markdownlintignore  README.md  cspell.json
.github/agents/: advisory.agent.md  agentflow-agent-context.md  critical-thinking.agent.md  debug.agent.md  expert-frontend-nextjs-engineer.agent.md  expert-python-fastapi-engineer.agent.md  implementation-plan.agent.md  mentor.agent.md  planning.agent.md  principal-software-engineer.agent.md  research-technical-spike.agent.md  research.agent.md  task-planner.agent.md  task-researcher.agent.md  tech-debt-remediation-plan.agent.md
.github/instructions/: accubrief-rules.instructions.md  frontend-standards.instructions.md
.github/prompts/: create-fastapi-endpoint.prompt.md  write-tests.prompt.md
backend/: MULTI_TOOL_WORKFLOW_FIX.md  test_execution.py  test_multi_tool_FIXED.json  test_workflow.py
backend/agentflow_core/: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml
backend/agentflow_core/api/: __init__.py  main.py
backend/agentflow_core/api/models/: __init__.py  workflow_model.py
backend/agentflow_core/api/routes/: __init__.py  health.py  sources.py  workflows.py
backend/agentflow_core/nodes/: __init__.py  aggregator_node.py  base_node.py  db_node.py  image_node.py  input_node.py  llm_node.py  router_node.py
backend/agentflow_core/runtime/: __init__.py  builder.py  executor.py  registry.py  state.py  validator.py
backend/agentflow_core/sources/: __init__.py  api_http.py  db_postgres.py  image_gemini.py  llm_gemini.py
backend/agentflow_core/utils/: __init__.py  error_handler.py  id_generator.py  logger.py
docs/: 01-PRD.md  02-SRS.md  03-HLD.md  04-LLD.md  05-API-DOC.md  06-DB-SCHEMA.md  07-STATE-MACHINE.md  08-SEQUENCE-DIAGRAM.md  09-IMPLEMENTATION-GUIDE.md  10-TEST-CASES.md  11-RISK-MITIGATION.md  12-PROJECT-PLAN.md  API_Spec.md  BACKEND-SPEC.md  FRONTEND-SPEC.md  Folder Structure.md  Frontend_App_Spec.md  README.md  WORKFLOW-EXAMPLES.md  WORKFLOW-SCHEMA.md  hld.md  lld.md  schema.md  srs.md
docs/features/backend/: BACKEND-FEATURES.md  FEATURE-LIST.md  (+5 more)
frontend/agentflow-studio/: package.json  pnpm-lock.yaml
scripts/: spell_check.bat
shared/examples/: workflow_multi_tool_agent.json
(+7 files in other folders)
